--- a/src/main/webapp/scss/_variables.scss
+++ b/src/main/webapp/scss/_variables.scss
@@ -52,6 +52,7 @@ $gray: rgba(0, 0, 0, .54) !default;
 $black: #3b3e43 !default;
 $black-text: rgba(0, 0, 0, .87) !default;
 $black-light: #616161 !default;
+$gray-light: #f7f7f7 !default;
 
 // Fonts
 $font-family-base: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", "Microsoft Yahei", sans-serif !default;
