--- a/src/main/webapp/scss/base.scss
+++ b/src/main/webapp/scss/base.scss
@@ -923,7 +923,7 @@ a[class*=" icon-"]:hover {
 
 .logo {
   display: inline-block;
-  background-image: url("../images/logo.png");
+  background-image: url("../images/logo2.png");
   width: 120px;
   height: 48px;
 }
