--- a/src/main/webapp/scss/mobile-base.scss
+++ b/src/main/webapp/scss/mobile-base.scss
@@ -590,7 +590,7 @@ a[class*=" icon-"]:hover {
 }
 .logo {
   display: inline-block;
-  background: url("../images/logo.png") -15px -8px;
+  background: url("../images/logo2.png") -15px -8px 30px;
   width: 100px;
   height: 30px;
 }
